feat: get recipe handler
